--- a/src/Bibliotheca.Server.Depository.AzureStorage.Core/project.json
+++ b/src/Bibliotheca.Server.Depository.AzureStorage.Core/project.json
@@ -5,6 +5,7 @@
     "warningsAsErrors": true
   },
   "dependencies": {
+    "WindowsAzure.Storage": "7.2.1",
     "YamlDotNet": "4.0.0",
     "Bibliotheca.Server.Mvc.Middleware.Diagnostics": "1.0.3",
     "Bibliotheca.Server.Depository.Abstractions": "1.0.1"
