Add service discovery registrations.

--- a/src/Bibliotheca.Server.Depository.AzureStorage.Api/appsettings.json
+++ b/src/Bibliotheca.Server.Depository.AzureStorage.Api/appsettings.json
@@ -2,6 +2,12 @@
   "SecureToken": "",
   "OAuthAuthority": "",
   "OAuthAudience": "",
+  "ServiceDiscovery": {
+    "ServiceId": "bibliotheca-depository-azurestorage",
+    "ServiceName": "Bibliotheca Depository AzureStorage",
+    "AgentAddress": "127.0.0.1",
+    "Datacenter": "dc1"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
