Change service discovery.

--- a/src/Bibliotheca.Server.Depository.AzureStorage.Api/appsettings.json
+++ b/src/Bibliotheca.Server.Depository.AzureStorage.Api/appsettings.json
@@ -5,8 +5,15 @@
   "ServiceDiscovery": {
     "ServiceId": "bibliotheca-depository-azurestorage",
     "ServiceName": "Bibliotheca Depository AzureStorage",
-    "AgentAddress": "127.0.0.1",
-    "Datacenter": "dc1"
+    "ServiceAddress": "127.0.0.1",
+    "ServicePort": 6000,
+    "ServiceHttpHealthCheck": "http://127.0.0.1:5000/api/health",
+    "ServiceTags": [
+      "bibliotheca",
+      "depository",
+      "azurestorage"
+    ],
+    "ServerAddress": "http://127.0.0.1:8500"
   },
   "Logging": {
     "IncludeScopes": false,
