--- a/src/Bibliotheca.Server.Depository.AzureStorage.Api/project.json
+++ b/src/Bibliotheca.Server.Depository.AzureStorage.Api/project.json
@@ -16,6 +16,7 @@
     "Microsoft.Extensions.Logging": "1.1.0",
     "Microsoft.Extensions.Logging.Console": "1.1.0",
     "Microsoft.Extensions.Logging.Debug": "1.1.0",
+    "Microsoft.Extensions.Logging.AzureAppServices": "1.0.0",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0",
     "Microsoft.Extensions.Configuration.CommandLine": "1.1.0",
     "Microsoft.AspNetCore.Mvc.Versioning": "1.0.3",
