Add information about version to health endpoint.

--- a/src/Bibliotheca.Server.Depository.AzureStorage.Core/Bibliotheca.Server.Depository.AzureStorage.Core.csproj
+++ b/src/Bibliotheca.Server.Depository.AzureStorage.Core/Bibliotheca.Server.Depository.AzureStorage.Core.csproj
@@ -1,5 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
+    <VersionPrefix>1.2.0</VersionPrefix>
     <TargetFramework>netstandard1.6</TargetFramework>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <DebugType>portable</DebugType>
@@ -8,12 +10,15 @@
     <PackageTargetFallback>$(PackageTargetFallback);dotnet5.6;dnxcore50;portable-net45+win8</PackageTargetFallback>
     <NetStandardImplicitPackageVersion>1.6.1</NetStandardImplicitPackageVersion>
   </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="WindowsAzure.Storage" Version="8.1.1" />
     <PackageReference Include="YamlDotNet" Version="4.1.0" />
     <PackageReference Include="Bibliotheca.Server.Mvc.Middleware.Diagnostics" Version="1.0.6" />
   </ItemGroup>
+
   <ItemGroup>
     <DotNetCliToolReference Include="libyear" Version="*" />
   </ItemGroup>
+  
 </Project>
