Change service type in config.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
         {
             "taskName": "build",
             "args": [
-                "${workspaceRoot}/src/Bibliotheca.Server.Depository.AzureStorage.Api/project.json"
+                "${workspaceRoot}/src/Bibliotheca.Server.Depository.AzureStorage.Api/Bibliotheca.Server.Depository.AzureStorage.Api.csproj"
             ],
             "isBuildCommand": true,
             "problemMatcher": "$msCompile"
