--- a/src/Bibliotheca.Server.Depository.AzureStorage.Api/appsettings.json
+++ b/src/Bibliotheca.Server.Depository.AzureStorage.Api/appsettings.json
@@ -5,7 +5,7 @@
   "OAuthAudience": "",
   "ServiceDiscovery": {
     "ServiceId": "bibliotheca-azurestorage-01",
-    "ServiceType": "bibliotheca-depository",
+    "ServiceType": "depository",
     "ServiceAddress": "http://127.0.0.1:10000",
     "ServiceHttpHealthCheck": "http://127.0.0.1:10000/api/health",
     "ServiceTags": [
