--- a/src/Bibliotheca.Server.Depository.AzureStorage.Api/web.config
+++ b/src/Bibliotheca.Server.Depository.AzureStorage.Api/web.config
@@ -4,11 +4,18 @@
   <!--
     Configure your application settings in appsettings.json. Learn more at https://go.microsoft.com/fwlink/?LinkId=786380
   -->
-
+  <system.web>
+    <httpRuntime executionTimeout="1800" maxRequestLength="204800" />
+  </system.web>
   <system.webServer>
     <handlers>
       <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified"/>
     </handlers>
-    <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" forwardWindowsAuthToken="false"/>
+    <aspNetCore requestTimeout="00:30:00" processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" forwardWindowsAuthToken="false"/>
+    <security> 
+        <requestFiltering>
+            <requestLimits maxAllowedContentLength="209715200" />
+        </requestFiltering>
+    </security>
   </system.webServer>
 </configuration>
